app/assets/stylesheets/selected_courses.scss
.course-btn{
	margin: 0px !important;
}
tbody#selectedCourses td{
	padding: 0px !important;
	text-align: center;
}
tbody#selectedCourses button{
	margin: 0px;
	width:100%;
	padding: 8px 8px 8px 8px;
}
tbody#selectedCourses button .row{
	margin: 0px;
	font-size:12px;
}
tbody#selectedCourses tr td:first-child {
	vertical-align: middle;
}
th#year-col{
	width: 37px !important;
	text-align: center;
	vertical-align: middle;
	padding: 0px;
}
.quarter{
	min-height:114px;
}
div.quarters-2, div.quarters-3{
	width: 200% !important;
}
.course-div{
	position: relative;
}
.course-div a{
	position: absolute;
	color: rgba(255, 255, 255, 0.71);
	right:0px;
	margin-top:2px;
	z-index: 2;
}
.course-credits{
	padding-right:15px !important;
}
.quarter a:hover span {
	color:white;
}

